--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: My MkDocs Material Documentation
+site_name: Разработване на уеб-страници с помощта на скриптов език HTML5/CSS3
 site_url: https://sitename.example
 theme:
   name: material
